LIBITD-2552. Added Group List UI View
Made a new template ui/groupListView.html and added a
URL path to this view and added a view for listing the
groups.

https://umd-dit.atlassian.net/browse/LIBITD-2552

--- a/src/ipmanager/ui/templates/ui/index.html
+++ b/src/ipmanager/ui/templates/ui/index.html
@@ -1,4 +1,6 @@
 {% extends 'ui/base.html' %}
 {% block content %}
-<p>Welcome to IP Manager</p>
+<h2>Welcome to IP Manager</h2>
+<h3>Go to <a href="admin/groups">IP Manager Admin</a></h3>
+<h3>Go to <a href="django-admin">Django Admin</a></h3>
 {% endblock %}
