--- a/src/ipmanager/ui/templates/ui/group_list_view.html
+++ b/src/ipmanager/ui/templates/ui/group_list_view.html
@@ -12,7 +12,7 @@
     <tbody>
       {% for group in group_list %}
         <tr>
-          <th scope="row" style="padding-bottom: 5px;"><a href="groups/{{group.key}}">{{ group.key }}</a></th>
+          <th scope="row" style="padding-bottom: 5px;"><a href='{% url "single_group" group.key %}'>{{ group.key }}</a></th>
           <td >{{ group.name }}</td>
           <td class="export_true">
             {% if group.export %} 
