LIBITD-2560. Added forms for creating and deleting relations
Added a forms file, made a created and deleted view, added url paths, modified the html

https://umd-dit.atlassian.net/browse/LIBITD-2560

--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -58,7 +58,11 @@
     Included Groups
   </th>
   {% for inc_groups in included_groups %}
-    <tr><td>{{inc_groups.object.key}} - {{inc_groups.object.name}}</td></tr>
+    <tr><td>{{inc_groups.object.key}} - {{inc_groups.object.name}}
+      <form method="post" action="{% url 'delete_relation' group.key inc_groups.pk %}">{% csrf_token %}
+        <button type="delete">Delete</button>
+      </form>
+    </td> </tr>
   {% endfor %}
 </table>
 
@@ -67,11 +71,18 @@
     Excluded Groups
   </th>
   {% for exc_groups in excluded_groups %}
-    <tr><td>{{exc_groups.object.key}} - {{exc_groups.object.name}}</td></tr>
+    <tr><td>{{exc_groups.object.key}} - {{exc_groups.object.name}}
+      <form method="post" action="{% url 'delete_relation' group.key exc_groups.pk %}">{% csrf_token %}
+        <button type="delete">Delete</button>
+      </form>
+    </td> </tr>
   {% endfor %}
 </table>
 </div>
-
+<form method="post" action="{% url 'relation' group.key %}">{% csrf_token %}
+  {{ relation_form }}
+  <button type="submit">Add Child Group</button>
+</form>  
 <br>
 
 {% endblock %}
