LIBITD-2559. Changed buttons
https://umd-dit.atlassian.net/browse/LIBITD-2559

--- a/src/ipmanager/ui/templates/ui/add_ip_range_form.html
+++ b/src/ipmanager/ui/templates/ui/add_ip_range_form.html
@@ -5,7 +5,7 @@
 <form method="post">{% csrf_token %}
   {{ form.group }}
   {{ form.value }}
-  <button type="submit" class="edit">Add new IP Range</button>
+  <button type="submit" class="create">Add IP Range</button>
   <a href="{% url 'single_group' group.key %}">Cancel</a>
 </form>
 
