LIBITD-2560. Made changes for creating and deleting relations forms
Fixed style issues

https://umd-dit.atlassian.net/browse/LIBITD-2560

--- a/src/ipmanager/ui/templates/ui/create_relation_form.html
+++ b/src/ipmanager/ui/templates/ui/create_relation_form.html
@@ -6,7 +6,7 @@
   {{ form.subject }}
   {{ form.object }}
   {{ form.relation }}
-  <button type="submit" class="edit">Add Child Group</button>
+  <button type="submit" class="create">Add Child Group</button>
   <a href='{% url "single_group" group.key %}'>Cancel</a>
 </form>  
 
