LIBITD-2461 Added create group and delete group functionality
https://umd-dit.atlassian.net/browse/LIBITD-2561

--- a/src/ipmanager/ui/templates/ui/group_list_view.html
+++ b/src/ipmanager/ui/templates/ui/group_list_view.html
@@ -2,6 +2,8 @@
 {% block content %}
 
 {% if group_list %}
+<a href='{% url "create_group"%}'>New Group</a>
+
   <table>
     <thead class="table">
       <th scope="col">Key</th>
