--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -80,7 +80,7 @@
   {% for inc_groups in included_groups %}
     <tr><td>{{inc_groups.object.key}} - {{inc_groups.object.name}}
       <form method="post" action="{% url 'delete_relation' group.key inc_groups.pk %}">{% csrf_token %}
-        <button type="delete">Delete</button>
+        <button class="delete" type="delete">Delete</button>
       </form>
     </td> </tr>
   {% endfor %}
