--- a/src/ipmanager/ui/static/ui/ui.css
+++ b/src/ipmanager/ui/static/ui/ui.css
@@ -1,16 +1,7 @@
-.notice {
-    margin: 0 auto;
-    width: fit-content;
-    border: 1px solid var(--medium-gray);
-    border-radius: 5px;
-    text-align: center;
-}
-.notice>h1 {
-    font-size: 1.25em;
-    margin: 0;
-    padding: .25em;
-    border-bottom: 1px solid var(--light-gray);
-}
-.notice>p {
-    margin: 1em;
+.horizontal-container {
+  margin-top: 0.5em;
+  display: flex;
+  flex-direction: row;
+  gap: 0.75em;
+  align-items: center;
 }
