LIBITD-2566. Remove inline styles.
I had a lot of cleanup to do, as I had forgotten to remove a lot
of inline styles. I also was told I shouldn't use any at all, so
I came up with replacements for the one-off styles I was using.

I also modified my use of some of the container classes to use
grids, which helped simplify the styling.

Styles are done using the Block Element Modifier (BEM) paradigm.

https://umd-dit.atlassian.net/browse/LIBITD-2566

--- a/src/ipmanager/ui/templates/ui/edit_group.html
+++ b/src/ipmanager/ui/templates/ui/edit_group.html
@@ -5,7 +5,7 @@
   {% csrf_token %}
 <h2>Editing Group</h2>
 <div>
-<table>
+<table class="lined">
   <tbody>
     <tr">
       <th>Key</th>
@@ -31,7 +31,7 @@
 </table>
 </div>
 
-<div style="margin-top: .5em; display: flex; flex-direction: row; gap: .75em; align-items: center;">
+<div class="horizontal-container">
   <button type="submit" class="edit">Update Group</button>
   <a class="button delete" href='{% url "single_group" group.key %}'>Cancel</a>
   <a class="button delete" href='{% url "list_all_groups" %}'>Home</a>
