--- a/src/ipmanager/ui/templates/ui/test_ip_form.html
+++ b/src/ipmanager/ui/templates/ui/test_ip_form.html
@@ -1,5 +1,5 @@
 {{ form.errors }}
-<form method="get" style="display: flex; gap: .75em">
+<form method="get" class="horizontal-container">
   {{form}}
   <button class="create" type="submit">Test</button>
 </form>
