--- a/src/ipmanager/ui/templates/ui/add_ip_range_form.html
+++ b/src/ipmanager/ui/templates/ui/add_ip_range_form.html
@@ -6,7 +6,7 @@
   {{ form.group }}
   {{ form.value }}
   <button type="submit" class="create">Add IP Range</button>
-  <a href="{% url 'single_group' group.key %}">Cancel</a>
+  <a class="button delete" href="{% url 'single_group' group.key %}">Cancel</a>
 </form>
 
 {% endblock %}
