--- a/src/ipmanager/ui/templates/ui/create_relation_form.html
+++ b/src/ipmanager/ui/templates/ui/create_relation_form.html
@@ -2,15 +2,13 @@
 <form method="post" action="{% url 'relation' group.key %}">
   {% csrf_token %}
   {{ form.subject }}
-  <div style="display: flex; flex-direction: row; align-items: center;">
-    <div style="width: 4em">{{ form.object.label }}</div>
+  <div class="square-grid">
+    <div>{{ form.object.label }}</div>
     {{ form.object }}
-  </div>
-  <div style="display: flex; flex-direction: row; align-items: center;">
-    <div style="width: 4em">{{ form.relation.label }}</div>
+    <div>{{ form.relation.label }}</div>
     {{ form.relation }}
   </div>
-  <div style="margin-top: .5em; display: flex; flex-direction: row; gap: .75em;">
+  <div class="horizontal-container">
     <button type="submit" class="create">Add Child Group</button>
     <a class="button delete" href='{% url "single_group" group.key %}'>Cancel</a>
   </div>
