LIBITD-2637 Multiple notes on Group detail view.
Updated the single_group detail view to display multiple notes. Each note includes a human-friendly datetime, the username of the user who created it, and the text content of the note.

https://umd-dit.atlassian.net/browse/LIBITD-2637

--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -68,6 +68,24 @@
     >Edit Group</a
   >
 
+  <!--
+  Add the <h2> heading right here for the Notes
+  -->
+  <h2>Notes</h2>
+
+  <table class="lined expanded">
+    <tbody>
+      {% for note in notes %}
+      <tr>
+        <td>{{ note.created|date:"F j, Y"}} {{ note.created|time:"g:i:sA" }}</td>
+        <td>{{note.user}}</td>
+        <td>{{note.content}}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+
   <h2>IP Ranges</h2>
 
   <table class="lined expanded">
