LIBITD-2655. Create a DeleteNoteView.
Created a DeleteNoteView in views.py, added a url path for the DeleteNoteView
in urls.py, and added a delete button for notes in single_group_view.html.

https://umd-dit.atlassian.net/browse/LIBITD-2655

--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -73,6 +73,17 @@
         <td>{{ note.created|date:"F j, Y"}} {{ note.created|time:"g:i:sA" }}</td>
         <td>{{note.user}}</td>
         <td>{{note.content}}</td>
+        <td>{{note.value}}</td>
+        <td>
+          <form
+            method="post"
+            class="no-margin"
+            action="{% url 'delete_note' group.key note.pk %}"
+          >
+            {% csrf_token %}
+            <button type="submit" class="delete">Delete</button>
+          </form>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
