--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -115,7 +115,7 @@
       {% for iprange in ip_ranges %}
       <tr>
         <td>{{iprange.value}}</td>
-        {% if request.user.is_superuser %}
+        {% if request.is_superuser %}
         <td>
           <form
             method="post"
