LIBITD-2664. Restoring Delete IP Range button.
Had to adjust one of the if conditions regarding the is_superuser
in the single_group_view.html.

https://umd-dit.atlassian.net/browse/LIBITD-2664

--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -115,7 +115,7 @@
       {% for iprange in ip_ranges %}
       <tr>
         <td>{{iprange.value}}</td>
-        {% if request.is_superuser %}
+        {% if is_superuser %}
         <td>
           <form
             method="post"
