--- a/src/ipmanager/ui/templates/ui/create_relation_form.html
+++ b/src/ipmanager/ui/templates/ui/create_relation_form.html
@@ -10,7 +10,7 @@
   </div>
   <div class="horizontal-container">
     <button type="submit" class="create">Add Child Group</button>
-    <a class="button delete" href='{% url "single_group" group.key %}'>Cancel</a>
+    <a class="button delete" href='{% url "single_group_" group.key %}'>Cancel</a>
   </div>
 </form>
 
