--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -15,7 +15,7 @@
       >
         {% csrf_token %}
         
-        <button type="delete" class="delete">Delete</button>
+            <button type="submit" class="delete" onclick="return confirm ('Are you sure you want to delete this group?');">Delete</button>
       </form>
       {% endif %}
     </div>
@@ -89,7 +89,7 @@
           >
           
             {% csrf_token %}
-            <button type="submit" class="delete">Delete</button>
+            <button type="submit" class="delete" onclick="return confirm ('Are you sure you want to delete this note.');">Delete</button>
           </form>
         </td>
         {% endif %}
@@ -123,7 +123,7 @@
             action="{% url 'delete_ip_range' group.key iprange.pk %}"
           >
             {% csrf_token %}
-            <button type="submit" class="delete">Delete</button>
+            <button type="submit" class="delete" onclick="return confirm ('Are you sure you want to delete this ip range?');">Delete</button>
           </form>
         </td>
         {% endif %}
@@ -155,7 +155,7 @@
             action="{% url 'delete_relation' group.key inc_groups.pk %}"
           >
             {% csrf_token %}
-            <button class="delete" type="delete">Delete</button>
+            <button type="submit" class="delete" onclick="return confirm ('Are you sure you want to delete this group?');">Delete</button>
           </form>
         </td>
       </tr>
@@ -174,7 +174,7 @@
             action="{% url 'delete_relation' group.key exc_groups.pk %}"
           >
             {% csrf_token %}
-            <button type="delete">Delete</button>
+            <button type="submit" class="delete" onclick="return confirm ('Are you sure you want to delete this group?');">Delete</button>
           </form>
           {% endif %}
         </td>
