--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -15,8 +15,8 @@
       >
         {% csrf_token %}
         
-        <button type="delete" class="delete">Delete</button>
-      </form>
+          <button type="submit" class="delete" onclick ="return confirm ('Are you sure you want to remove this group?');">Remove</button>      
+        </form>
       {% endif %}
     </div>
   </div>
@@ -89,7 +89,7 @@
           >
           
             {% csrf_token %}
-            <button type="submit" class="delete">Delete</button>
+            <button type="submit" class="delete" onclick = "return confirm ('Are you sure you want to remove this note.');">Remove</button>
           </form>
         </td>
         {% endif %}
@@ -123,7 +123,7 @@
             action="{% url 'delete_ip_range' group.key iprange.pk %}"
           >
             {% csrf_token %}
-            <button type="submit" class="delete">Delete</button>
+            <button type="submit" class="delete" onclick = "return confirm ('Are you sure you want to remove this ip range?');">Remove</button>
           </form>
         </td>
         {% endif %}
@@ -155,7 +155,7 @@
             action="{% url 'delete_relation' group.key inc_groups.pk %}"
           >
             {% csrf_token %}
-            <button class="delete" type="delete">Delete</button>
+            <button class="delete" type="delete" onclick = "return confirm ('Are you sure you want to remove this group?');">Remove</button>
           </form>
         </td>
       </tr>
@@ -174,7 +174,7 @@
             action="{% url 'delete_relation' group.key exc_groups.pk %}"
           >
             {% csrf_token %}
-            <button type="delete">Delete</button>
+            <button type="delete" onclick = "return confirm ('Are you sure you want to remove this group?');">Remove</button>
           </form>
           {% endif %}
         </td>
