LIBITD-2662. Increase the legibility of the IP test results.
Added iconcs next to the "True" or "False" messages in the group_list_view.html
and the single_group_view.html for better legibility of the IP test results.

https://umd-dit.atlassian.net/browse/LIBITD-2662

--- a/src/ipmanager/ui/templates/ui/group_list_view.html
+++ b/src/ipmanager/ui/templates/ui/group_list_view.html
@@ -30,7 +30,13 @@
           </td>
           <td>{{ group.description }}</td>
           {% if test_ip %} 
-            <td>{{group.contained}}</td>
+            <td>
+              {% if group.contained %}
+                True ✅
+              {% else %}
+                False ❌
+              {% endif %}
+            </td>
           {% endif %}
         </tr>
       {% empty %}
