--- a/src/ipmanager/ui/templates/ui/new_group.html
+++ b/src/ipmanager/ui/templates/ui/new_group.html
@@ -23,7 +23,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="horizontal-container">
+  <div class="controls">
     <button type="submit" class="create">Create Group</button>
     <a class="button delete" href='{% url "list_all_groups" %}'>Cancel</a>
   </div>
