--- a/src/ipmanager/ui/templates/ui/single_group_view.html
+++ b/src/ipmanager/ui/templates/ui/single_group_view.html
@@ -1,211 +1,130 @@
 {% extends 'ui/base.html' %} {% block content %}
-<div class="flexible-width-container">
-  <div class="horizontal-container horizontal-container--space-between">
-    <h1>{{group.name}} ({{group.key}})</h1>
-    <div class="horizontal-container">
-      {% if is_superuser %}
-      <a class="button create" href='{% url "create_group"%}'
-        >New Group</a
-      >
 
-      <form
-        method="post"
-        action="{% url 'delete_group' group.pk %}"
-        class="no-margin"
-      >
-        {% csrf_token %}
-        
-          <button type="submit" class="delete" onclick="return confirm ('Are you sure you want to remove this group?');">Remove</button>      
-        </form>
-      {% endif %}
-    </div>
-  </div>
-  {% include 'ui/test_ip_form.html' %}
-
-  {% if test_ip %}
-    <tr>
-      <th>Group Contains IP?</th>
-      <td>
-        {% if contained %}
-          True ✅
-        {% else %}
-          False ❌
-        {% endif %}
-      </td>
-    </tr>
-  {% endif %}
-
-  <h2>Group Information</h2>
-  <div>
-    <table class="lined expanded">
-      <tbody>
-        <tr>
-          <th>Key</th>
-          <td>{{group.key}}</td>
-        </tr>
-        <tr>
-          <th>Name</th>
-          <td>{{group.name}}</td>
-        </tr>
-        <tr>
-          <th>Description</th>
-          <td>{{group.description}}</td>
-        </tr>
-        <tr>
-          <th>Export</th>
-          {% if group.export %}
-          <td>
-            <span class="export_true">Yes</span> - Group is sent to client
-            applications
-          </td>
-          {% else %}
-          <td>
-            <span class="export_false">No</span> - Group is used internally, and
-            not sent to client applications
-          </td>
-          {% endif %}
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
+<div class="controls">
   {% if is_superuser %}
-  <a
-    href='{% url "edit_group" group.pk %}'
-    class="button edit"
-    >Edit Group</a
-  >
-  {% endif %}
-
-  <h2>Notes</h2>
-
-  <table class="lined expanded">
-    <tbody>
-      {% for note in notes %}
-      <tr>
-        <td>{{ note.created|date:"F j, Y"}} {{ note.created|time:"g:i:sA" }}</td>
-        <td>{{note.user}}</td>
-        <td>{{note.content}}</td>
-        <td>{{note.value}}</td>
-        {% if is_superuser %}
-        <td>
-          <form
-            method="post"
-            class="no-margin"
-            action="{% url 'delete_note' group.key note.pk %}"
-          >
-          
-            {% csrf_token %}
-            <button type="submit" class="delete" onclick = "return confirm ('Are you sure you want to remove this note.');">Remove</button>
-          </form>
-        </td>
-        {% endif %}
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
-  {% if is_superuser %}
-    <form 
-      method="post" 
-      action="{% url 'create_note' group.key %}"
-      >
-      {% csrf_token %}
-      <div class="horizontal-container">
-        {{ note_form }}
-        <button type="submit" class="create">Add Note</button>
-      </div>
-    </form>
-  {% endif %}
-
-  <h2>IP Ranges</h2>
-
-  <table class="lined expanded">
-    <tbody>
-      {% for iprange in ip_ranges %}
-      <tr>
-        <td>{{iprange.value}}</td>
-        {% if is_superuser %}
-        <td>
-          <form
-            method="post"
-            class="no-margin"
-            action="{% url 'delete_ip_range' group.key iprange.pk %}"
-          >
-            {% csrf_token %}
-            <button type="submit" class="delete" onclick = "return confirm ('Are you sure you want to remove this ip range?');">Remove</button>
-          </form>
-        </td>
-        {% endif %}
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
-  {% if is_superuser %}
-  <form method="post" action="{% url 'create_new_ip_range' group.key %}">
+  <a class="button create" href='{% url "create_group"%}'>New Group…</a>
+  <form method="post" action="{% url 'delete_group' group.pk %}" class="button">
     {% csrf_token %}
-    <div class="horizontal-container">
-      {{ ip_range_form }}
-      <button type="delete" class="create">Add IP Range</button>
-    </div>
-  </form>
-  {% endif %}
-
-  <h2>Child Groups</h2>
-  <div class="horizontal-container-even horizontal-container-even--2">
-    <table class="lined">
-      <th>Included Groups</th>
-      {% for inc_groups in included_groups %}
-      <tr>
-        <td>
-          {{inc_groups.object.key}} - <a href = "{%url 'single_group' inc_groups.object.key%}">{{inc_groups.object.name}}</a>
-          <form
-            method="post"
-            action="{% url 'delete_relation' group.key inc_groups.pk %}"
-          >
-            {% csrf_token %}
-            <button class="delete" type="delete" onclick = "return confirm ('Are you sure you want to remove this group?');">Remove</button>
-          </form>
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
-
-    <table class="lined">
-      <th>Excluded Groups</th>
-      {% for exc_groups in excluded_groups %}
-      <tr>
-        <td>
-          {{exc_groups.object.key}} - <a href = "{%url 'single_group' exc_groups.object.key%}">{{exc_groups.object.name}}</a>
-          {% if is_superuser %}
-          <form
-            method="post"
-            action="{% url 'delete_relation' group.key exc_groups.pk %}"
-          >
-            {% csrf_token %}
-            <button type="submit" class = "delete" onclick = "return confirm ('Are you sure you want to remove this group?');">Remove</button>
-          </form>
-          {% endif %}
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
-  </div>
-
-  {% if is_superuser %}
-  <form method="post" action="{% url 'relation' group.key %}">
-    {% csrf_token %} {{ relation_form.subject }}
-    <div class="square-grid">
-      <div>{{ relation_form.object.label }}</div>
-      {{ relation_form.object }}
-      <div>{{ relation_form.relation.label }}</div>
-      {{ relation_form.relation }}
-    </div>
-    <button type="submit" class="create margin-top--small">
-      Add Child Group
-    </button>
+    <button type="submit" class="delete" onclick="return confirm ('Are you sure you want to delete this group?');">Delete</button>
   </form>
   {% endif %}
 </div>
+
+{% include 'ui/test_ip_form.html' %}
+{% if test_ip %}
+  <tr>
+    <th>Group Contains IP?</th>
+    <td>
+      {% if contained %}
+        True ✅
+      {% else %}
+        False ❌
+      {% endif %}
+    </td>
+  </tr>
+{% endif %}
+
+<h2>Group Information</h2>
+<div>
+  <table class="lined expanded">
+    <tbody>
+      <tr>
+        <th>Key</th>
+        <td>{{group.key}}</td>
+      </tr>
+      <tr>
+        <th>Name</th>
+        <td>{{group.name}}</td>
+      </tr>
+      <tr>
+        <th>Description</th>
+        <td>{{group.description}}</td>
+      </tr>
+      <tr>
+        <th>Export</th>
+        {% if group.export %}
+        <td>
+          <span class="export_true">Yes</span> - Group is sent to client
+          applications
+        </td>
+        {% else %}
+        <td>
+          <span class="export_false">No</span> - Group is used internally, and
+          not sent to client applications
+        </td>
+        {% endif %}
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+{% if is_superuser %}
+<a href='{% url "edit_group" group.pk %}' class="button edit">Edit Group…</a>
+{% endif %}
+
+<h2>Notes</h2>
+
+<table class="lined expanded">
+  <tbody>
+    {% for note in notes %}
+    <tr>
+      <td>{{ note.created|date:"F j, Y"}} {{ note.created|time:"g:i:sA" }}</td>
+      <td>{{ note.user }}</td>
+      <td>{{ note.content }}</td>
+      <td>{{ note.value }}</td>
+      {% if is_superuser %}
+      <td>
+        <form method="post" class="button" action="{% url 'delete_note' group.key note.pk %}">
+          {% csrf_token %}
+          <button type="submit" class="delete" onclick="return confirm('Are you sure you want to delete this note?');">Delete</button>
+        </form>
+      </td>
+      {% endif %}
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+{% if is_superuser %}
+  <form method="post" action="{% url 'create_note' group.key %}" class="single-input">
+    {% csrf_token %}
+    {% for field in note_form %}
+    {{ field }}
+    {% endfor %}
+    <button type="submit" class="create">Add Note</button>
+  </form>
+{% endif %}
+
+<h2>IP Ranges</h2>
+
+<table class="lined expanded">
+  <tbody>
+    {% for iprange in ip_ranges %}
+    <tr>
+      <td>{{iprange.value}}</td>
+      {% if is_superuser %}
+      <td>
+        <form method="post" class="button" action="{% url 'delete_ip_range' group.key iprange.pk %}">
+          {% csrf_token %}
+          <button type="submit" class="delete" onclick="return confirm('Are you sure you want to remove this IP range?');">Remove</button>
+        </form>
+      </td>
+      {% endif %}
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+{% if is_superuser %}
+<form method="post" action="{% url 'create_new_ip_range' group.key %}" class="single-input">
+  {% csrf_token %}
+  {{ ip_range_form }}
+  <button type="delete" class="create">Add IP Range</button>
+</form>
+{% endif %}
+
+{% include 'ui/related_groups.html' with related=included_groups %}
+
+{% include 'ui/related_groups.html' with related=excluded_groups %}
+
 {% endblock %}
